# FFmpegDecoder

./: .gitignore  README.md  settings.gradle
android-app/app/: build.gradle
android-app/app/src/androidTest/java/com/audio/study/ffmpegdecoder/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: AudioDecoderBridge.cpp  AudioOpenSLBridge.cpp  NativeAudioTrackEngine.cpp  OpenGLBridge.cpp
android-app/app/src/main/cpp/common/: GLUtils.cpp  GLUtils.h
android-app/app/src/main/cpp/decoder/: audio_decoder_controller.cpp  audio_decoder_controller.h  video_decoder.h  video_decoder_controller.cpp  video_decoder_controller.h  video_frame.h
android-app/app/src/main/cpp/ffmpeg/include/armeabi-v7a/libavformat/: avformat.h
android-app/app/src/main/cpp/libopensl/: opensl_es_context.cpp  opensl_es_util.h  sound_service.h
android-app/app/src/main/cpp/render/: GLImageTextureMapSample.cpp  GLTriangleSample.cpp
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/: App.java  AudioOpenSLESActivity.kt  AudioTrackerActivity.kt  LiveStreamActivity.kt  LiveWatchActivity.kt  OpenGLActivity.kt  XMediaPlayerActivity.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/audiotracke/: AudioDecoderImpl.kt  AudioPlayer.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/common/: AudioClockProvider.kt  MediaStatus.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/net/: NetworkFlvSink.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/opensles/: OnSoundTrackListener.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/player/: XMediaPlayer.kt
android-app/app/src/main/java/com/audio/study/ffmpegdecoder/utils/: AvFileMixer.kt  LogUtil.java  (+1 more)
android-app/app/src/main/res/layout/: activity_audio_open_slesactivity.xml  activity_av_record.xml  activity_live_audio.xml  activity_live_stream.xml  activity_live_watch.xml  activity_open_glactivity.xml  activity_video_player.xml  activity_xmedia_player.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/audio/study/ffmpegdecoder/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecoderBridge.cpp  AudioOpenSLBridge.cpp  AudioOpenSlESBridge.cpp  CMakeLists.txt  NativeAudioEngine.cpp  NativeVidioEngine.cpp  OpenGLBridge.cpp  OpenSlLiveAudioEngine.cpp  VideoDecoderBridge.cpp  audio_decoder.cpp  audio_decoder_controller.cpp  audio_decoder_controller.h  audio_decoder_cortroller.cpp  audio_decoder_cortroller.h  native-lib.cpp
app/src/main/cpp/common/: CommonTools.h  ImageDef.h  ffmpeg_time.h  media_status.h
app/src/main/cpp/decoder/: audio_decoder.cpp  audio_decoder.h  audio_decoder_controller.cpp  audio_decoder_controller.h  video_decoder.cpp  video_decoder.h  video_decoder_controller.cpp  video_decoder_controller.h
app/src/main/cpp/ffmpeg/include/armeabi-v7a/libavutil/: parseutils.h
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/include/libavutil/: bprint.h  encryption_info.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  timecode.h
app/src/main/cpp/libopensl/: opensl_es_context.h  sound_service.cpp  sound_service.h
app/src/main/cpp/live/: LiveAudioEngineImpl.cpp  LiveAudioEngineImpl.h
app/src/main/cpp/musicdecoder/: audio_decoder.cpp  audio_decoder.h  audio_decoder_controller.cpp  audio_decoder_controller.h  audio_visualizer.cpp  audio_visualizer.h
app/src/main/cpp/render/: GLImageTextureMapSample.cpp  GLImageTextureMapSample.h  GLRectangleSample.cpp  GLRectangleSample.h  GLSampleBase.h  GLTriangleSample.cpp  GLTriangleSample.h  MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/java/com/audio/study/ffmpegdecoder/: App.java  AudioOpenSLESActivity.kt  AudioTrackerActivity.kt  AudioVideoSyncActivity.kt  AvRecordActivity.kt  Constants.kt  FileUtil.java  LiveAVMutiActivity.kt  LiveAudioActivity.kt  MainActivity.kt  OpenGLActivity.kt  VideoPlayerActivity.kt  XMediaPlayerActivity.kt
app/src/main/java/com/audio/study/ffmpegdecoder/audiotracke/: AudioDecoder.kt  AudioDecoderImpl.kt  NativePlayController.kt  NativePlayer.kt
app/src/main/java/com/audio/study/ffmpegdecoder/common/: Constants.kt
app/src/main/java/com/audio/study/ffmpegdecoder/opengl/: GLType.kt  MyGLRenderer.kt  MyGLSurfaceView.kt  MyNativeRender.kt
app/src/main/java/com/audio/study/ffmpegdecoder/opensles/: OpenSlesAudioPlayer.kt  SoundTrackController.kt
app/src/main/java/com/audio/study/ffmpegdecoder/player/: XMediaPlayer.kt  XMediaPlayerFactory.kt
app/src/main/java/com/audio/study/ffmpegdecoder/utils/: FileUtil.java  LogUtil.java  ResourceUtils.java  TimeUtils.kt  ToastUtils.kt  WavWriter.kt
app/src/main/java/com/audio/study/ffmpegdecoder/video/: VideoPlayer.kt
app/src/main/java/com/audio/study/ffmpegdecoder/views/: AudioVideoSyncView.kt  SimpleVideoView.kt  WaveformView.kt
app/src/main/res/layout/: activity_audio_open_slesactivity.xml  activity_audio_tracke.xml  activity_audio_video_sync.xml  activity_live_audio.xml  activity_main.xml  activity_open_glactivity.xml  activity_video_player.xml  activity_xmedia_player.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: ffmpeg_build_all.sh
stream-server/: .gitignore  go.mod
stream-server/cmd/server/: main.go
stream-server/configs/: local.yaml
stream-server/internal/config/: config.go
stream-server/internal/mux/: flv_muxer.go
stream-server/internal/player/: client.go
stream-server/internal/server/: http_status.go  live_hub.go  server.go
stream-server/internal/server/flvfilter/: flvfilter.go
stream-server/internal/storage/: file_sink.go
stream-server/pkg/protocol/: flv.go
stream-server/pkg/utils/: logger.go
stream-server/scripts/: run_dev.sh
stream-server/web/: index.html
(+33 files in other folders)
